--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "breath-normalizer",
   "version": "0.1.0",
+  "homepage": "https://volodymyrvoronov.github.io/breath-normalizer",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -15,6 +16,7 @@
     "eslint": "^7.30.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "gh-pages": "^3.2.3",
     "node-sass": "^4.14.1",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
@@ -30,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
